숲 API 연결 방식 변경 bianca api -> soop4j

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,6 +12,11 @@ commands:
     usage: /<command> <player> <amount>
     aliases:
       - dt
+  setconfig:
+    description: Command to set configuration values.
+    usage: /<command> <addr> <value>
+    aliases:
+      - sc
   jail:
     description: Command to jail a player.
     usage: /<command> <player> <duration>
