/reloadconfig 추가 - 모든 애드온의 config 리로드하기

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -17,6 +17,12 @@ commands:
     usage: /<command> <addr> <value>
     aliases:
       - sc
+  reloadconfig:
+    description: Command to reload all configurations
+    usage: /<command>
+    aliases:
+      - rc
+      - rlcfg
   jail:
     description: Command to jail a player.
     usage: /<command> <player> <duration>
